# gowebrtc

./: .gitignore  Cargo.toml  build.rs
examples/: standalone.rs
golang/: go.mod  go.sum  main.go
src/: lib.rs
