[package]
name = "gowebrtc"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.2"

[dependencies]
parity-multiaddr = "0.8.0"

[dev-dependencies]
async-std = "1.5.0"
